--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@ button {
 <img src="Quandale-Dingle-8.jpg" alt="Quandale-Dingle-8">
 <img src="what-music-do-you-think-i-listen-to-v0-5kxskzrgkv7f1.webp">
 <img src="ah.jpeg" alt="ah">
-<img src="bomba.jpg" alt="bomba">
+<img src="bomba.jpeg" alt="bomba">
 <img src="cum.jpeg" alt="cum">
 <img src="luxulub.jpg" alt="luxulub">
-<img src="sybau.jpeg" alt="sybau">
+<img src="sybau.webp" alt="sybau">
 <img src="huhn.jpeg" alt="huhn">
+
 
 
 
