--- a/index.html
+++ b/index.html
@@ -6,16 +6,13 @@
 <style>
 body { 
     text-align: center; 
-    margin: 50px; 
+    margin: 0; 
+    padding: 0; 
     background: #fff; 
     font-family: Arial, sans-serif;
 }
 #login-box {
-    border: 2px solid #333;
-    display: inline-block;
-    padding: 20px;
-    border-radius: 10px;
-    background: #f9f9f9;
+    margin-top: 200px;
 }
 input[type="password"] {
     padding: 10px;
@@ -28,7 +25,8 @@ button {
     margin-top: 10px;
 }
 #content {
-    display: none; /* Bilder erst nach Login sichtbar */
+    display: none; /* Bilder unsichtbar bis Login */
+    margin: 50px;
 }
 img { 
     max-width: 300px; 
@@ -38,24 +36,21 @@ img {
 </head>
 <body>
 
-<!-- Login Box -->
+<!-- Login Feld -->
 <div id="login-box">
-    <h2>Login</h2>
-    <p>Bitte Passwort eingeben:</p>
     <input type="password" id="password" placeholder="Passwort">
     <br>
     <button onclick="checkPassword()">Login</button>
     <p id="error" style="color:red;"></p>
 </div>
 
-<!-- Versteckte Inhalte (Bilder-Seite) -->
+<!-- Versteckte Bilder -->
 <div id="content">
-    <h1>Willkommen!</h1>
     <img src="vik.jpg" alt="vik">
     <img src="jp.png" alt="jp">
     <img src="actrually.webp" alt="actrually">
     <img src="Quandale-Dingle-8.jpg" alt="Quandale-Dingle-8">
-    <img src="what-music-do-you-think-i-listen-to-v0-5kxskzrgkv7f1.webp">
+    <img src="what-music-do-you-think-i-listen-to-v0-5kxskzrgkv7f1.webp" alt="">
     <img src="ah.jpeg" alt="ah">
     <img src="bomba.jpeg" alt="bomba">
     <img src="cum.jpeg" alt="cum">
@@ -79,4 +74,3 @@ function checkPassword() {
 
 </body>
 </html>
-
