--- a/index.html
+++ b/index.html
@@ -5,77 +5,139 @@
 <title>Login</title>
 <style>
 body { 
-    text-align: center; 
     margin: 0; 
     padding: 0; 
-    background: #fff; 
+    background: #f4f4f9; 
     font-family: Arial, sans-serif;
 }
+
+/* Zentrierte Login-Box */
 #login-box {
-    margin-top: 200px;
+    width: 350px;
+    margin: 120px auto;
+    padding: 30px;
+    background: white;
+    border-radius: 12px;
+    box-shadow: 0 4px 20px rgba(0,0,0,0.1);
+    text-align: center;
+}
+#login-box h2 {
+    margin-bottom: 20px;
 }
 input[type="password"] {
-    padding: 10px;
+    width: 90%;
+    padding: 12px;
     font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    margin-bottom: 15px;
 }
 button, a.donate-btn {
-    padding: 10px 20px;
+    width: 95%;
+    padding: 12px;
     font-size: 16px;
     cursor: pointer;
     margin-top: 10px;
-    display: inline-block;
     border: none;
-    border-radius: 5px;
+    border-radius: 8px;
     text-decoration: none;
+    display: inline-block;
 }
 button {
     background: #007bff;
     color: white;
 }
 a.donate-btn {
-    background: #ffc439; /* typisches PayPal-Gelb */
+    background: #ffc439; /* PayPal-Gelb */
     color: black;
+    font-weight: bold;
 }
 #or-text {
     margin-top: 15px;
     font-weight: bold;
+    color: #666;
 }
+#error {
+    color: red;
+    margin-top: 10px;
+}
+
+/* Content-Bereich nach Login */
 #content {
-    display: none; /* Bilder unsichtbar bis Login */
-    margin: 50px;
+    display: none;
+    padding: 40px;
 }
-img { 
-    max-width: 300px; 
-    margin: 20px; 
+.gallery {
+    display: grid;
+    grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
+    gap: 20px;
+}
+.gallery img {
+    width: 100%;
+    border-radius: 0; /* Keine abgerundeten Ecken */
+    box-shadow: none; /* Kein Schatten */
+}
+
+/* Cookie Banner */
+#cookie-banner {
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background: rgba(0,0,0,0.9);
+    color: white;
+    padding: 15px;
+    text-align: center;
+    display: none;
+    z-index: 1000;
+}
+#cookie-banner button {
+    background: #28a745;
+    color: white;
+    margin-left: 10px;
+    border-radius: 5px;
+    padding: 8px 16px;
+    border: none;
+    cursor: pointer;
 }
 </style>
 </head>
 <body>
 
-<!-- Login Feld -->
+<!-- Login Box -->
 <div id="login-box">
+    <h2>Willkommen</h2>
+    <p>Bitte Passwort eingeben:</p>
     <input type="password" id="password" placeholder="Passwort">
     <br>
     <button onclick="checkPassword()">Login</button>
-    <p id="error" style="color:red;"></p>
+    <p id="error"></p>
 
-    <div id="or-text">or</div>
+    <div id="or-text">oder</div>
     <a href="https://www.paypal.com/donate" target="_blank" class="donate-btn">Donate</a>
 </div>
 
-<!-- Versteckte Bilder -->
+<!-- Bilder-Content -->
 <div id="content">
-    <img src="vik.jpg" alt="vik">
-    <img src="jp.png" alt="jp">
-    <img src="actrually.webp" alt="actrually">
-    <img src="Quandale-Dingle-8.jpg" alt="Quandale-Dingle-8">
-    <img src="what-music-do-you-think-i-listen-to-v0-5kxskzrgkv7f1.webp" alt="">
-    <img src="ah.jpeg" alt="ah">
-    <img src="bomba.jpeg" alt="bomba">
-    <img src="cum.jpeg" alt="cum">
-    <img src="luxulub.jpg" alt="luxulub">
-    <img src="sybau.webp" alt="sybau">
-    <img src="huhn.jpeg" alt="huhn">
+    <div class="gallery">
+        <img src="vik.jpg" alt="vik">
+        <img src="jp.png" alt="jp">
+        <img src="actrually.webp" alt="actrually">
+        <img src="Quandale-Dingle-8.jpg" alt="Quandale-Dingle-8">
+        <img src="what-music-do-you-think-i-listen-to-v0-5kxskzrgkv7f1.webp" alt="">
+        <img src="ah.jpeg" alt="ah">
+        <img src="bomba.jpeg" alt="bomba">
+        <img src="cum.jpeg" alt="cum">
+        <img src="luxulub.jpg" alt="luxulub">
+        <img src="sybau.webp" alt="sybau">
+        <img src="huhn.jpeg" alt="huhn">
+    </div>
+</div>
+
+<!-- Cookie Banner -->
+<div id="cookie-banner">
+    Diese Website verwendet Cookies, um dein Erlebnis zu verbessern. 
+    <button onclick="acceptCookies()">Akzeptieren</button>
 </div>
 
 <script>
@@ -85,10 +147,22 @@ function checkPassword() {
     if (input === "dihcheese") {
         document.getElementById("login-box").style.display = "none";
         document.getElementById("content").style.display = "block";
+        error.textContent = ""; // Fehlertext entfernen
     } else {
         error.textContent = "Falsches Passwort!";
     }
 }
+
+function acceptCookies() {
+    document.getElementById("cookie-banner").style.display = "none";
+    localStorage.setItem("cookiesAccepted", "true");
+}
+
+document.addEventListener("DOMContentLoaded", function() {
+    if (!localStorage.getItem("cookiesAccepted")) {
+        document.getElementById("cookie-banner").style.display = "block";
+    }
+});
 </script>
 
 </body>
