--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ a.donate-btn {
 function checkPassword() {
     const input = document.getElementById("password").value;
     const error = document.getElementById("error");
-    if (input === "dihcheese") {
+    if (input === "QDDJPP") {
         document.getElementById("login-box").style.display = "none";
         document.getElementById("content").style.display = "block";
         error.textContent = ""; // Fehlertext entfernen
@@ -167,4 +167,5 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </body>
 </html>
+
 
