--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@ a.donate-btn {
 function checkPassword() {
     const input = document.getElementById("password").value;
     const error = document.getElementById("error");
-    if (input === "fungusenjoyer") {
+    if (input === "itakedih") {
         document.getElementById("login-box").style.display = "none";
         document.getElementById("content").style.display = "block";
         error.textContent = ""; // Fehlertext entfernen
@@ -185,6 +185,7 @@ document.addEventListener("DOMContentLoaded", function() {
 
 </body>
 </html>
+
 
 
 
